# phonebook

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
phonebook/: config.py  main.py  menu_service.py  models.py  service.py
phonebook/data/: phonebook.csv
phonebook/handlers/: add_new_row.py  find_a_record.py  phonebook_entry.py  record_editing.py
phonebook/main_menu_handlers/: add_new_row.py  display_all_phone_book.py  record_editing.py
phonebook/menu/: handlers_menu.py  menu_service.py  menu_text.py
phonebook/service/: phonebook_entry.py  search_entry.py  service_function.py
